# destinator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  contracts.py  di.py  es_service.py  main.py  services.py  storage.py
api/routers/: myplaces.py  recs.py  search.py  secrets.py
app/: Dockerfile  package-lock.json  package.json
app/src/: App.js
app/src/components/: attractions.js  examples.js  header.js  home.js  introCard.js  map.js  myPlaceActions.js  myPlacesLoader.js  place.js  placeBigCard.js  placeCard.js  placeSmallCard.js  placesGrid.js  placesList.js  placesScreen.js  search.js  tags.js
app/src/redux/: actionTypes.js  actions.js  constants.js  selectors.js  store.js
app/src/redux/reducers/: index.js  myPlaces.js  place.js  places.js  recs.js  search.js  secrets.js
app/src/routes/: home.js  myplaces.js  place.js  recommended.js  tag.js  top.js
app/templates/: index.html
core/: contracts.py  es_service.py  my_places.py  recommender.py  storage.py
flask-app/: main.py
notebooks/: bc trip advisor exploration.ipynb
recommendations/: reviews.py
tests/: test_api.py
