[tool.poetry]
name = "travel_data"
version = "0.1.0"
description = ""
authors = ["Evgeny Pavlov <epavlov@news360.ru>"]

[tool.poetry.dependencies]
python = "3.6.1"
jupyterlab = "^2.1.2"
torch = "^1.5.0"
numpy = "^1.18.4"
pandas = "^1.0.3"
spacy = "^2.2.4"
dask = "^2.16.0"
laserembeddings = "^1.0.1"
tensorboard = "^2.2.1"
setuptools = "^46.3.1"
fasttext = "^0.9.2"
gensim = "^3.8.3"
elasticsearch = "^7.7.0"
scikit-learn = "^0.23.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
tensorboard = "^2.2.1"
seaborn = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
